--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
+Flask==0.10.1
+Jinja2==2.7.3
+MarkupSafe==0.23
 PyYAML==3.11
 SQLAlchemy==0.9.7
+Werkzeug==0.9.6
 argh==0.25.0
 chardet==2.2.1
+itsdangerous==0.24
 mutagenx==1.24
 pathtools==0.1.2
 pytaglib==0.4.1
